# bird_training

./: .gitignore  PROTOCOL.md  README.md  debug_import.py  main.py  pyproject.toml  requirements.txt  test.py  train.py  train_byol.py  train_metric.py  train_metric_triplet.py  train_simsiam.py  train_ssl.py  train_ssl_multicrop.py  train_supcon.py
.claude/: settings.local.json
configs/: config.yaml  train_byol_config.yaml  train_metric_config.yaml  train_simsiam_config.yaml  train_ssl_config.yaml  train_ssl_improved.yaml  train_ssl_multicrop.yaml  train_supcon_config.yaml  train_triplet_config.yaml
configs/augmentation/: contrastive_medium.yaml  contrastive_strong.yaml  contrastive_weak.yaml  multicrop.yaml  none.yaml  reconstruction_denoising.yaml  reconstruction_mae.yaml  val.yaml
configs/callbacks/: default.yaml
configs/data/: precomputed.yaml  real.yaml  ssl_data.yaml
configs/decoder/: conv_decoder.yaml
configs/experiment/: phase2_simclr.yaml  phase2_supcon_panns.yaml  phase3_finetune.yaml
configs/frontend/: identity.yaml  logmel.yaml  pcen.yaml
configs/head/: arcface.yaml  embedding.yaml  linear.yaml  projection.yaml
configs/loss/: ntxent.yaml  ntxent_improved.yaml  supcon.yaml  triplet.yaml
docs/: ssl_evaluation_analysis.md
notebooks/: metric_analyse.ipynb
scripts/: check_gpu.py  check_leakage.py  convert_ssl_ckpt.py  evaluate_ssl.py  generate_test_data.py  precompute_mels.py
src/: system.py  system_byol.py  system_metric.py  system_simsiam.py  system_ssl.py  system_ssl_multicrop.py  system_supcon.py  system_triplet.py
(+69 files in other folders)
